--- a/ShareApp/app/src/main/res/layout/activity_welcome.xml
+++ b/ShareApp/app/src/main/res/layout/activity_welcome.xml
@@ -4,14 +4,24 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.WelcomeActivity">
+    tools:context=".View.WelcomeActivity"
+    android:orientation="vertical">
 
 
     <TextView
         android:textSize="30sp"
         android:gravity="center"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:text="log in successfully"/>
+
+    <TextView
+        android:id="@+id/textviewShowRoomdata"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textSize="25sp"
+        android:layout_marginStart="10sp"
+        android:layout_marginTop="20sp"
+        android:text="show data for room database"/>
 
 </LinearLayout>
