--- a/ShareApp/app/src/main/res/layout/activity_welcome.xml
+++ b/ShareApp/app/src/main/res/layout/activity_welcome.xml
@@ -9,6 +9,7 @@
 
 
     <TextView
+        android:id="@+id/notifiusername"
         android:textSize="30sp"
         android:gravity="center"
         android:layout_width="match_parent"
@@ -20,8 +21,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="25sp"
+        android:textColor="#000"
         android:layout_marginStart="10sp"
         android:layout_marginTop="20sp"
         android:text="show data for room database"/>
+
 
 </LinearLayout>
