--- a/ShareApp/app/src/main/res/layout/activity_welcome.xml
+++ b/ShareApp/app/src/main/res/layout/activity_welcome.xml
@@ -4,10 +4,10 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.WelcomeActivity"
-    android:orientation="vertical">
+    android:orientation="horizontal"
+    tools:context=".View.WelcomeActivity">
 
-
+    <!--
     <TextView
         android:id="@+id/notifiusername"
         android:textSize="30sp"
@@ -25,6 +25,40 @@
         android:layout_marginStart="10sp"
         android:layout_marginTop="20sp"
         android:text="show data for room database"/>
+    -->
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_marginRight="5sp">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/reclerViewShowData"
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
+            android:layout_weight="10"
+            android:orientation="vertical">
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+    </LinearLayout>
+
+
+    <!--
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="match_parent"
+        android:layout_weight="1">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/reclerViewShowId"
+            android:layout_width="match_parent"
+            android:layout_height="0sp"
+            android:layout_weight="10"
+            android:orientation="vertical">
+
+        </androidx.recyclerview.widget.RecyclerView>
+
+    </LinearLayout> -->
 
 
 </LinearLayout>
