--- a/ShareApp/app/src/main/res/layout/activity_main.xml
+++ b/ShareApp/app/src/main/res/layout/activity_main.xml
@@ -96,6 +96,7 @@
             android:layout_marginTop="50dp"
             android:layout_gravity="center"
             android:text="login"
+            android:onClick="LogIN"
             android:textAllCaps="false"
             android:textSize="20sp" />
 
