--- a/ShareApp/app/src/main/res/layout/activity_welcome.xml
+++ b/ShareApp/app/src/main/res/layout/activity_welcome.xml
@@ -4,13 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".View.WelcomeActivity">
+    tools:context=".View.WelcomeActivity"
+    android:padding="8sp">
 
 
-    <TextView
-        android:textSize="30sp"
-        android:gravity="center"
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recylerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="log in successfully"/>
+        android:layout_height="match_parent">
+
+    </androidx.recyclerview.widget.RecyclerView>
+
 </LinearLayout>
