--- a/ShareApp/app/src/main/res/layout/item.xml
+++ b/ShareApp/app/src/main/res/layout/item.xml
@@ -1,14 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:padding="10sp">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="5sp"
+    android:layout_marginLeft="5sp"
+    android:layout_marginRight="5sp"
+    app:cardCornerRadius="5sp">
 
     <TextView
         android:id="@+id/showEmail"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:layout_margin="10sp"
+        android:textColor="#000"
+        android:textSize="20sp"
+        android:text="akijmia.cse@gmail.com"/>
 
-</LinearLayout>
+</androidx.cardview.widget.CardView>
