--- a/ShareApp/app/src/main/res/layout/activity_main.xml
+++ b/ShareApp/app/src/main/res/layout/activity_main.xml
@@ -6,8 +6,21 @@
     android:layout_height="match_parent"
     tools:context=".View.MainActivity"
     android:weightSum="6"
-    android:background="@color/colorPrimary"
+    android:background="#024383"
     android:orientation="vertical">
+
+    <com.google.android.material.appbar.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="#BCE0AD"
+            app:titleTextColor="@color/colorBlack"/>
+
+    </com.google.android.material.appbar.AppBarLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -151,37 +164,12 @@
             android:id="@+id/login_button"
             android:layout_width="120sp"
             android:layout_height="wrap_content"
+            android:background="#BCE0AD"
             android:layout_marginTop="50dp"
             android:layout_gravity="center"
             android:text="login"
             android:onClick="LogIN"
-            android:textAllCaps="false"
             android:textSize="20sp" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="0sp"
-        android:layout_weight="1"
-        android:orientation="horizontal"
-        android:gravity="center">
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Don't have account?"
-            android:textSize="16sp"
-            android:textColor="@color/colorWhite"/>
-
-        <TextView
-            android:id="@+id/logIN_register"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Register"
-            android:layout_marginStart="5sp"
-            android:textSize="16sp"
-            android:textColor="#F56A40"/>
 
     </LinearLayout>
 
